--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     EJS_biosUrl = 'bios/gb_bios.bin';
     EJS_core = 'gb';
     EJS_color = '#000000';
-    EJS_gameUrl = 'roms/Pokemon - Red Version (USA, Europe) (SGB Enhanced).gbc';
+    EJS_gameUrl = 'roms/Pokemon - Blue Version (USA, Europe) (SGB Enhanced).gbc';
     EJS_pathtodata = './data/';
   </script>
   <script src="./data/loader.js"></script>
